# fsearch

./: .gitignore  PLAN.md  PROJECT_OVERVIEW.md  README.md  RULES.md  bm  build  flake.nix  test
MEMORIES/: Do not force LLM-only translation for languages that models cannot verify  Do not force LLM-only translation for languages that models cannot verify.frontmatter.md  Explicit gettext language selection needs a non-C message locale  Explicit gettext language selection needs a non-C message locale.frontmatter.md  FSearch tests must isolate XDG state from user configuration  FSearch tests must isolate XDG state from user configuration.frontmatter.md  Local model translation must distinguish CLI syntax from user prose  Local model translation must distinguish CLI syntax from user prose.frontmatter.md  Ollama PO translation requires done NDJSON and literal PO syntax protection  Ollama PO translation requires done NDJSON and literal PO syntax protection.frontmatter.md  OpenAI PO translation requires streams bounded batches and exact printf checks  OpenAI PO translation requires streams bounded batches and exact printf checks.frontmatter.md  Required locale enforcement needs a blessed list hash and a warn to strict rollout  Required locale enforcement needs a blessed list hash and a warn to strict rollout.frontmatter.md
data/: fsearch.1  io.github.cboxdoerfer.FSearch.metainfo.xml.in
inbox/: 2026-07-18-translate-po-resilience.patch  2026-07-22-from-mechatron-prime-fsearch-verification.md
po/: LINGUAS  LOCALE_NAMES  Makevars  POTFILES.in  REQUIRED_LOCALES  REQUIRED_LOCALES.sha256  am.po  ar.po  az.po  bg.po  bn.po  bs.po  ca.po  da.po  de.po  el.po  en_GB.po  es.po  et.po  eu.po  fa.po  fi.po  fil.po  fr.po  frc.po  fsearch.pot  ga.po  gl.po  ha.po  he.po  hi.po  hr.po  hu.po  id.po  ie.po  is.po  it.po  ja.po  ka.po  km.po  (+33 more)
src/: fsearch.c  fsearch_array.c  fsearch_cli.c  fsearch_cli.h  fsearch_cli_config.c  fsearch_cli_config.h  fsearch_config.c  fsearch_config.h  fsearch_database.c  fsearch_database.h  fsearch_database_entry.c  fsearch_database_file.c  fsearch_database_index.c  fsearch_database_index_store.c  fsearch_database_refresh_policy.c  fsearch_database_refresh_policy.h  fsearch_database_scan.c  fsearch_database_scan.h  fsearch_filter.h  fsearch_glob.c  fsearch_glob.h  fsearch_locale.c  fsearch_locale.h  fsearch_query_flags.h  fsearch_query_node.c  fsearch_query_parser.c  fsearch_query_tree.c  fsearch_window.c  main.c  meson.build
src/tests/: benchmark_glob.c  meson.build  test_cli.c  test_database.c  test_database_file.c  test_database_index_store.c  test_environment.c  test_query.c
tests/: static-analysis
tests/benchmark/: cli-help.tsv  complexity.awk  glob-scaling.tsv  linear-samples.tsv  quadratic-samples.tsv  test_complexity
tests/cli/: test_cli
tests/i18n/: test_catalogs  test_required_locales  test_translate_po
tests/isolation/: test_environment
tests/package/: test_gsettings_runtime
tools/: check-required-locales  translate-po
